# cv_cmake_tutorial

cmake_tutorial/: CMakeLists.txt  Dockerfile  main.cpp  main_string.cpp  main_unique_ptr.cpp  makefile
cmake_tutorial/include/: calculator.h  string_calculator.h
cmake_tutorial/src/: calculator.cpp  string_calculator.cpp
cpp_hw1/: CMakeLists.txt  Dockerfile  README.md  main_test.cpp  main_train.cpp  test_knn.py
cpp_hw1/include/: knn_test.h  knn_train.h
cpp_hw1/src/: knn_test.cpp  knn_train.cpp
hw2/: CMakeLists.txt  README.md  main.cpp
hw2/example/: example_1.in  example_2.in  example_3.in
hw2/include/: card.h  deck.h
hw2/src/: card.cpp  deck.cpp
